   request by Olivier Nicole)

- #13171: expose `Domain.self_index : unit -> int` (a somewhat-dense
  indexing of currently-running domains) for advanced use-cases of
  domain-indexed concurrent data structures.
  (Gabriel Scherer,
   review by KC Sivaramakrishnan, Miod Vallat and Nicolás Ojeda Bär,
   report by Vesa Karvonen)

### Other libraries:

### Tools:

- #11716: ocamllex: mismatched parentheses and curly brackets are now caught
  by ocamllex, instead of causing invalid OCaml code to be generated.
  (Demi Marie Obenour)

- #12904: Run the testsuite with ThreadSanitizer on a PR when label
  `run-thread-sanitizer` is added
  (Olivier Nicole, suggested by Sébastien Hinderer and David Allsopp, review by
   Gabriel Scherer)

* #13114: Support ocamldebug remote debugging over IPv6 on all
  platforms, and over Unix domain sockets on Windows.
  (Antonin Décimo, review by Gabriel Scherer and Miod Vallat)

- #13136: Rewrite GDB extensions and macros in debugger-agnostic Python, and add
  LLDB support for them.
  (Nick Barnes).

### Toplevel:

- #12891: Improved styling for initial prompt
  (Florian Angeletti, review by Gabriel Scherer)

- #13053: Improved display of builtin types such as `_ list` when aliased.
  (Samuel Vivien, review by Florian Angeletti)

### Manual and documentation:

- #12868: Manual: simplify style colours of the post-processed manual and API
  HTML pages, and fix the search button icon
  (Yawar Amin, review by Simon Grondin, Gabriel Scherer, and Florian Angeletti)

- #12949: document OCaml release cycles and version strings in
   `release-info/introduction.md`.
  (Florian Angeletti, review by Fabrice Buoro, Kate Deplaix, Damien Doligez, and
   Gabriel Scherer)

- #12976: Manual: use webman/<version>/*.html and
  webman/<version>/api/ for OCaml.org HTML manual generation
  (Shakthi Kannan, review by Hannes Mehnert, and Florian Angeletti)

- #13045: Emphasize caution about behaviour of custom block finalizers.
  (Nick Barnes)
