@@ -1,29 +1,0 @@
-#**************************************************************************
-#*                                                                        *
-#*                                 OCaml                                  *
-#*                                                                        *
-#*                     Mark Shinwell, Jane Street Europe                  *
-#*                                                                        *
-#*   Copyright 1999 Institut National de Recherche en Informatique et     *
-#*     en Automatique.                                                    *
-#*   Copyright 2018--2019 Jane Street Group LLC                           *
-#*                                                                        *
-#*   All rights reserved.  This file is distributed under the terms of    *
-#*   the GNU Lesser General Public License version 2.1, with the          *
-#*   special exception on linking described in the file LICENSE.          *
-#*                                                                        *
-#**************************************************************************
-
-$(LOCAL_SRC)/.depend: $(COMPILERLIBS_COPIED_SOURCES) \
-  $(COMPILERLIBS_COPIED_SOURCES_INTFS) $(LOCAL_SRC)/Makefile
-	$(V_OCAMLDEP)$(OCAMLDEP_CMD) -I $(LOCAL_SRC) $(COMPILERLIBS_COPIED_SOURCES) \
-	$(COMPILERLIBS_COPIED_SOURCES_INTFS) \
-        > $(LOCAL_SRC)/.depend
-
--include $(LOCAL_SRC)/.depend
-
-$(LOCAL_SRC)/%.ml:
-	cp $< $@
-
-$(LOCAL_SRC)/%.mli:
-	cp $< $@
